# apteryx-rest

./: .gitignore  Makefile  Makefile.am  README.md  api.html  autogen.sh  configure.ac  fcgi.c  go.sh  index.html  internal.h  logging.c  main.c  rest.c  rpc.c  run.sh  schema.c  sse.c  test.c  test_rest.py  test_restapi.py  test_restconf.py  yang-library.c
.github/workflows/: pr-tests.yml
models/: aug:test.xml  ietf-restconf-monitoring.yang  ietf-yang-library.h  ietf-yang-library.map  ietf-yang-library.xml  namespace.map  other:test.xml  rfc6243_example.xml  rfc6243_example.yang  test.xml  test2.xml  test2:aug.xml  test2:aug2.xml  test2:test2.xml  test:aug.xml  test:other.xml  user-rfc6243_example-deviation.yang
modules/: interfaces.xml
tests/: apteryx.py  conftest.py  fcgi.py  test_api.py  test_create.py  test_delete.py  test_get.py  test_query.py  test_replace.py  test_restapi.py  test_restconf.py  test_rpc.py  test_termination.py  test_update.py  test_yang_library.py
